2018-01-22  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (open-http): Admit that HTTPS is not supported instead
	of raising 'PARSE-INTEGER: substring "" does not have integer
	syntax at position 0'.

2018-01-22  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: g++ bugs are not relevant to clang.

2018-01-22  Sam Steingold  <sds@gnu.org>

	* glm4/no-c++.m4: Update from gnulib to enable g++ compilation.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on AIX/POWER in 64-bit mode.
	* Makefile.devel (multibuild-aix-powerpc-64-xlc,
	multibuild-aix-powerpc-64-gcc): Enable all build variants that work.
	* makemake.in (XCFLAGS): For 64-bit AIX/POWER, enable all optimizations
	except ASM.
	* lispbibl.d (GENERIC64C_HEAPCODES_WORKS): Update value for AIX/POWER.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on AIX/POWER in 32-bit mode.
	* Makefile.devel (multibuild-aix-powerpc-32-xlc,
	multibuild-aix-powerpc-32-gcc): Enable all build variants that work.
	* makemake.in (XCFLAGS): For AIX/POWER, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix test failure regarding BOOLE on AIX with xlc.
	* makemake.in: When compiling lisparit.c with xlc for AIX and -DWIDE,
	reduce optimizations.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Comment.
	* stream.d (handle_pathname): Add comment about AIX.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix a crash due to (CLEAR-INPUT *TERMINAL-IO*) on AIX.
	* stream.d (clear_tty_input) [AIX]: Temporarily set the SIGHUP signal
	handler.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix error while creating clisp.c on AIX with xlc.
	* makemake.in: Choose the name of the gen-* temporary executables in a
	way that avoids particular suffixes.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix compilation error in C++ mode on AIX in 32-bit mode.
	* lispbibl.d (INIT_SYMBOL_TAB): Don't define when using g++ on 32-bit
	AIX/PowerPC.
